---------------------------------------------------------------------------
Version 6.3.7  [DEVEL] 2011-0?-??
- bugfix: facility local<x> was not correctly interpreted in legacy filters
  Was only accepted if it was the first PRI in a multi-filter PRI.
  Thanks to forum user Mark for bringing this to our attention.
- bugfix: imuxsock did no longer ignore message-provided timestamp, if
  so configured (the *default*). Lead to no longer sub-second timestamps.
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=281
- bugfix: omfile returns fatal error code for things that go really wrong
  previously, RS_RET_RESUME was returned, which lead to a loop inside the
  rule engine as omfile could not really recover.
- bugfix: rsyslogd -v always said 64 atomics were not present
  thanks to mono_matsuko for the patch
---------------------------------------------------------------------------
Version 6.3.6  [DEVEL] 2011-09-19
- added $InputRELPServerBindRuleset directive to specify rulesets for RELP
- bugfix: config parser did not support properties with dashes in them
  inside property-based filters. Thanks to Gerrit Seré for reporting this.
---------------------------------------------------------------------------
Version 6.3.5  [DEVEL] (rgerhards/al), 2011-09-01
- bugfix/security: off-by-two bug in legacy syslog parser, CVE-2011-3200
- bugfix: mark message processing did not work correctly
- imudp&imtcp now report error if no listener at all was defined
  Thanks to Marcin for suggesting this error message.
- bugfix: potential misadressing in property replacer
---------------------------------------------------------------------------
Version 6.3.4  [DEVEL] (rgerhards), 2011-08-02
- added support for action() config object
  * in rsyslog core engine
  * in omfile
  * in omusrmsg
- bugfix: omusrmsg format usr1,usr2 was no longer supported
- bugfix: misaddressing in config handler
  In theory, can cause segfault, in practice this is extremely unlikely